recaptcha appearing and working on localhost, verifies on the clie verifies on the client side for now

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,7 @@
     -->
     <title>Community Action on Waste</title>
     <script src="https://kit.fontawesome.com/da64a70204.js" crossorigin="anonymous"></script>
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript on your browser to run this app.</noscript>
